# json-plist-mobileconfig

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
json_plist_mobileconfig/: converter.py
json_plist_mobileconfig/tests/: conftest.py  test_cli.py  test_library.py
