[tool.poetry]
name = "json-plist-mobileconfig"
version = "0.1.0"
description = "A Python package to convert files between JSON, plist, and mobileconfig 'Custom Settings' formats."
authors = ["Robert Coleman <pypi@robert.net.nz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
json-plist-mobileconfig = 'json_plist_mobileconfig.converter:main'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
